--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,11 @@
             <artifactId>hzero-apaas-common</artifactId>
             <version>2.8.0.RELEASE</version>
         </dependency>
-
+        <!--        export -->
+        <dependency>
+            <groupId>org.hzero.starter</groupId>
+            <artifactId>hzero-starter-export</artifactId>
+        </dependency>
 
     </dependencies>
 
